changed implementation to cut by max frames instead of repeated states

--- a/plotter/curve_plotter.ipynb
+++ b/plotter/curve_plotter.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b0c09444-3530-408c-baa2-4ef9f5c7ad1f",
    "metadata": {},
    "outputs": [
@@ -104,6 +104,182 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Graph saved as ../GOF/augmented_0.2_5_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_4_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_6_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_10_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_8_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_9_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_2_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_1_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_7_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.2_3_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/augmented_0.3_3_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_6_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_9_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_10_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_5_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_7_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_8_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_2_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_4_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.3_1_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/augmented_0.4_7_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_5_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_10_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_9_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_8_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_1_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_2_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_4_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_6_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.4_3_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/augmented_0.5_4_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_7_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_5_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_8_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_9_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_1_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_6_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_3_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_2_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.5_10_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/augmented_0.6_9_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_10_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_4_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_2_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_8_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_1_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_6_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_7_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_3_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.6_5_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/augmented_0.7_5_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_1_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_8_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_3_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_7_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_4_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_2_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_9_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_10_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.7_6_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/augmented_0.8_6_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_2_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_10_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_3_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_9_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_8_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_1_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_4_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_5_graph.png\n",
+      "Graph saved as ../GOF/augmented_0.8_7_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/big1_0.2_4_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_1_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_6_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_9_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_3_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_8_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_7_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_10_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_2_graph.png\n",
+      "Graph saved as ../GOF/big1_0.2_5_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/big1_0.3_8_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_10_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_5_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_2_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_1_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_4_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_9_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_7_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_3_graph.png\n",
+      "Graph saved as ../GOF/big1_0.3_6_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/big1_0.4_1_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_3_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_2_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_6_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_7_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_8_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_4_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_9_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_10_graph.png\n",
+      "Graph saved as ../GOF/big1_0.4_5_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/big1_0.5_1_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_8_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_4_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_9_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_3_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_6_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_7_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_10_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_2_graph.png\n",
+      "Graph saved as ../GOF/big1_0.5_5_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/big1_0.6_6_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_1_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_7_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_10_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_2_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_3_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_8_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_9_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_5_graph.png\n",
+      "Graph saved as ../GOF/big1_0.6_4_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/big1_0.7_10_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_5_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_4_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_1_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_8_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_2_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_7_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_9_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_6_graph.png\n",
+      "Graph saved as ../GOF/big1_0.7_3_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/big1_0.8_2_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_9_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_10_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_5_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_3_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_6_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_1_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_4_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_7_graph.png\n",
+      "Graph saved as ../GOF/big1_0.8_8_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/conway_0.2_1_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_6_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_8_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_4_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_3_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_5_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_2_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_9_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_10_graph.png\n",
+      "Graph saved as ../GOF/conway_0.2_7_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/conway_0.3_3_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_9_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_4_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_10_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_8_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_7_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_2_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_1_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_6_graph.png\n",
+      "Graph saved as ../GOF/conway_0.3_5_graph.png\n",
+      "Processed 10 files.\n",
       "Graph saved as ../GOF/conway_0.4_9_graph.png\n",
       "Graph saved as ../GOF/conway_0.4_1_graph.png\n",
       "Graph saved as ../GOF/conway_0.4_7_graph.png\n",
@@ -114,6 +290,50 @@
       "Graph saved as ../GOF/conway_0.4_4_graph.png\n",
       "Graph saved as ../GOF/conway_0.4_10_graph.png\n",
       "Graph saved as ../GOF/conway_0.4_3_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/conway_0.5_2_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_3_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_6_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_5_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_10_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_1_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_8_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_4_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_9_graph.png\n",
+      "Graph saved as ../GOF/conway_0.5_7_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/conway_0.6_10_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_1_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_9_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_5_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_8_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_6_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_3_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_7_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_4_graph.png\n",
+      "Graph saved as ../GOF/conway_0.6_2_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/conway_0.7_4_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_7_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_1_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_3_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_8_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_10_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_9_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_2_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_6_graph.png\n",
+      "Graph saved as ../GOF/conway_0.7_5_graph.png\n",
+      "Processed 10 files.\n",
+      "Graph saved as ../GOF/conway_0.8_6_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_10_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_5_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_9_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_4_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_2_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_1_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_3_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_7_graph.png\n",
+      "Graph saved as ../GOF/conway_0.8_8_graph.png\n",
       "Processed 10 files.\n"
      ]
     }
@@ -158,17 +378,22 @@
     "    print(f\"Graph saved as {output_file}\")\n",
     "\n",
     "def main():\n",
-    "    file_pattern = \"../GOF/conway_0.4_*.csv\"\n",
-    "    file_names = glob.glob(file_pattern)\n",
+    "    systems = [\"augmented\", \"big1\", \"conway\"]\n",
+    "    steps = [\"0.2\", \"0.3\", \"0.4\", \"0.5\", \"0.6\", \"0.7\", \"0.8\"]\n",
+    "    for system in systems:\n",
+    "        for step in steps:\n",
+    "            \n",
+    "            file_pattern = \"../GOF/\"+system+\"_\"+step+\"_*.csv\"\n",
+    "            file_names = glob.glob(file_pattern)\n",
     "    \n",
-    "    if not file_names:\n",
-    "        print(f\"No files found matching the pattern: {file_pattern}\")\n",
-    "        return\n",
+    "            if not file_names:\n",
+    "                print(f\"No files found matching the pattern: {file_pattern}\")\n",
+    "                return\n",
     "    \n",
-    "    for file_name in file_names:\n",
-    "        create_graph(file_name)\n",
+    "            for file_name in file_names:\n",
+    "                create_graph(file_name)\n",
     "    \n",
-    "    print(f\"Processed {len(file_names)} files.\")\n",
+    "            print(f\"Processed {len(file_names)} files.\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
